# gpwh

./: .gitignore  README.md  gpwh.cabal  stack.yaml
app/: Main.hs
lesson1/: 1.6-first_prog.hs
lesson3/: fig.3.4.hs
lesson4/: addressLetter.hs
lesson7/: myGCD.hs  sayAmount_v2.hs
lesson8/: collatz.hs  myCycle.hs
lesson9/: myFoldl.hs  myFoldr.hs  myMap.hs
src/Unit1/Lesson01/: Code1_1.hs  Code1_6.hs
src/Unit1/Lesson03/: Code3_4.hs
src/Unit1/Lesson04/: AddressLetter.hs  Code4_4.hs  Code4_5.hs
src/Unit1/Lesson05/: MyExampleUrlBuilder.hs
src/Unit1/Lesson06/: AssignToGroups.hs
src/Unit1/Lesson07/: MyGCD.hs  SayAmount_v1.hs  SayAmount_v2.hs
src/Unit1/Lesson08/: Ackermann.hs  Collatz.hs  MyCycle.hs  MyLength.hs  MyTake.hs
src/Unit1/Lesson09/: MyFilter.hs  MyFoldl.hs  MyFoldr.hs  MyMap.hs  MyReverse.hs
src/Unit1/Lesson10/: Cup.hs  Robot.hs
src/Unit2/Lesson12/: Code12_1.hs  Code12_11.hs  Code12_14.hs  Code12_4.hs  Code12_9.hs
src/Unit2/Lesson14/: Code14_13.hs  Code14_2.hs  Code14_3.hs  Code14_6.hs  Code14_7.hs  Code14_9.hs
src/Unit3/Lesson17/: Code17_1.hs  Code17_12.hs  Code17_17.hs  Code17_4.hs  Code17_5.hs
src/Unit3/Lesson18/: Code18_11.hs  Code18_20.hs  Code18_8.hs
src/Unit3/Lesson19/: Code19_14.hs  Code19_5.hs  Code19_6.hs  Code19_9.hs
src/Unit4/Lesson21/: Code21_1.hs  Code21_12.hs  Code21_2.hs  Code21_9.hs
src/Unit4/Lesson22/: Code22_11.hs  Code22_3.hs  Code22_6.hs  Code22_7.hs
src/Unit4/Lesson23/: Code23_10.hs  Code23_11.hs  Code23_4.hs
src/Unit4/Lesson24/: Code24_2.hs  Code24_3.hs  Code24_4.hs  Code24_7.hs  Code24_8.hs  StrictIO.hs
src/Unit5/Lesson27/: Code27_14.hs  Code27_2.hs  Code27_3.hs
src/Unit5/Lesson28/: Code28_10.hs  Code28_12.hs  Code28_13.hs  Code28_6.hs
src/Unit5/Lesson29/: Code29_11.hs  Code29_7.hs
src/Unit5/Lesson30/: Code30_14.hs  Code30_9.hs
src/Unit5/Lesson31/: Code31_18.hs
src/Unit5/Lesson32/: Code32_2.hs  Code32_3.hs
unit1/lesson04/: list.4.5.hs
unit1/lesson05/: myExampleUrlBuilder.hs
unit1/lesson06/: assignToGroups.hs
unit1/lesson08/: myLength.hs
unit1/lesson10/: cup.hs
unit2/lesson12/: listing-12.14.hs  listing-12.9.hs
unit2/lesson14/: listing-14.2.hs  listing-14.3.hs  listing-14.9.hs
unit3/lesson18/: listing-18.11.hs
unit3/lesson19/: listing-19.14.hs  listing-19.5.hs  listing-19.9.hs
unit4/lesson21/: listing-21.12.hs  listing-21.9.hs
unit4/lesson22/: listing-22.11.hs  listing-22.3.hs
unit4/lesson23/: listing-23.10.hs  listing-23.4.hs
unit4/lesson24/: listing-24.3.hs  strict_io.hs
unit5/: listing-27.14.hs
unit5/lesson27/: listing-27.3.hs
