name:                gpwh
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mavaji/gpwh#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Unit1.Lesson01.Code1_1
                     , Unit1.Lesson01.Code1_6
                     , Unit1.Lesson03.Code3_4
                     , Unit1.Lesson04.AddressLetter
                     , Unit1.Lesson04.Code4_4
                     , Unit1.Lesson04.Code4_5
                     , Unit1.Lesson05.MyExampleUrlBuilder
                     , Unit1.Lesson06.AssignToGroups
                     , Unit1.Lesson07.MyGCD
                     , Unit1.Lesson07.SayAmount_v1
                     , Unit1.Lesson07.SayAmount_v2
                     , Unit1.Lesson08.Ackermann
                     , Unit1.Lesson08.Collatz
                     , Unit1.Lesson08.MyCycle
                     , Unit1.Lesson08.MyLength
                     , Unit1.Lesson08.MyTake
                     , Unit1.Lesson09.MyFilter
                     , Unit1.Lesson09.MyFoldl
                     , Unit1.Lesson09.MyFoldr
                     , Unit1.Lesson09.MyMap
                     , Unit1.Lesson09.MyReverse
                     , Unit1.Lesson10.Cup
                     , Unit1.Lesson10.Robot
                     , Unit2.Lesson12.Code12_1
                     , Unit2.Lesson12.Code12_4
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable gpwh
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gpwh
                     , containers
  default-language:    Haskell2010

test-suite gpwh-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gpwh
                     , hspec
                     , QuickCheck
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mavaji/gpwh
